# vbml

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  mypy.ini  pyproject.toml
.github/: FUNDING.yml
.github/actions/install-dependencies/: action.yml
.github/workflows/: ci.yml  push.yml
docs/: index.md  patcher.md  pattern.md
examples/: extra_validator.py  first_steps.py  first_steps_patcher.py  first_steps_validator.py  syntax_anything.py  syntax_except.py  syntax_one_char.py  syntax_recursion.py  syntax_single.py  syntax_union.py  union.py
tests/: test_patcher.py  test_pattern.py
vbml/: __init__.py  error.py  misc.py
vbml/parser/: __init__.py  argument_parser.py  inclusion_parser.py  parser.py  syntax.py  validator_parser.py
vbml/patcher/: __init__.py  abc.py  patcher.py
vbml/pattern/: __init__.py  abc.py  pattern.py  syntax.py  syntax_processing.py
vbml/pattern/validation/: __init__.py  ahead.py  validator_parser.py
vbml/utils/: __init__.py  exception.py  list_processing.py  syntax_argument.py
vbml/validator/: __init__.py  abc.py  ahead.py  default.py  func.py  map.py  validator.py
