[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vbml"
description = "Markup language that compiles to regex."
authors = [{ name = "timoniq", email = "tesseradecades@mail.ru" }]
requires-python = ">=3.13,<4.0"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [{ name = "luwqz1", email = "howluwqz1@gmail.com" }]
version = "2.0.dev0"
keywords = [
    "very beautiful",
    "markup lang",
    "markup language",
    "regexp",
    "regex",
    "re",
    "string validation",
    "re compiler",
    "string-matching",
    "string-parser",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "choicelib (>=0.1.5,<0.2.0)",
    "fntypes",
]

[project.urls]
Source = "https://github.com/tesseradecade/vbml"
"Bug Tracker" = "https://github.com/tesseradecade/vbml/issues"
Documentation = "https://github.com/tesseradecade/vbml/blob/master/docs/index.md"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0,<5",
    "ruff>=0.12.0,<1",
    "basedpyright>=1.29.4,<2",
    "sort-all>=1.3.0,<2",
    "pytest>=8.4.1,<9",
    "pytest-asyncio>=1.0.0,<2",
    "pytest-cov>=6.2.1,<7",
    "pytest-mock>=3.14.1,<4",
]

[tool.uv]
package = true

[tool.uv.sources]
fntypes = { git = "https://github.com/timoniq/fntypes.git" }

[tool.ruff]
line-length = 150
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
  "I",
  "D",
  "N",
  "PLR",
  "Q",
  "COM",
  "TC",
  "YTT",
  "SIM"
]
ignore = [
  "COM812",
  "N805",
  "N818",
  "TC001",
  "TC002",
  "TC003",
  "TC004",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D202",
  "D203",
  "D205",
  "D209",
  "D211",
  "D213",
  "D400",
  "D401",
  "D404",
  "D415",
  "PLR2004",
  "PLR0911",
  "PLR0912",
  "PLR0913"
]
fixable = ["ALL"]
exclude = [".venv", ".idea", "docs"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
exclude = [
  ".venv",
  ".idea",
  ".ruff_cache",
  ".pytest_cache",
  "docs",
]
typeCheckingMode = "strict"
pythonPlatform = "All"
pythonVersion = "3.13"
reportMissingImports = true
reportMissingTypeStubs = false
reportSelfClsParameterName = false
